# surely

./: CMakeLists.txt  README.md  debug_setup.sh  install_prereqs.sh  out.ppm  rebuild.sh  run.sh  setup.sh  xcode_setup.sh
include/: camera.h  intersection.h  material.h  ogl.h  primitives.h  ray.h  shading.h  vec3.h
src/: main.cpp  ogl.cpp
